Added 'location' to find page

--- a/templates/AnimalShelter/find.html
+++ b/templates/AnimalShelter/find.html
@@ -65,7 +65,8 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-7 order-2 order-lg-1 my-3">
                 <div class="input-group mb-3 justify-content-center">
-                    <button id="search" class="btn btn-success" type="button">SEARCH NEAR BY</button>
+                    <button id="search" class="btn btn-color mx-2" type="button"><i class="fas fa-search-location"></i> SEARCH NEAR BY</button>
+                    <button id="location" class="btn btn-color mx-2" type="button"><i class="fas fa-map-marked-alt"></i> OUR SHELTER</button>
                 </div>
                 <div style="overflow: auto; max-height: 550px">
                     <div id="results" class="px-4 my-1 ">
